MComix 1.01

    - During database upgrade, MComix did not consider that books in the
      "Last read" database might no longer exist, leading to program crash.
      This has been fixed.

MComix 1.00
Release date: 26.04.2013

    - When "Store information about recently opened files" is enabled in
      the preferences dialog, all opened books will automatically be added
      to the library and moved into the collection "Recent". In addition,
      the last read page will be stored and recalled the next time the book
      is opened again.

    - Fixed several malfunctions that could occur if no SQLite library
      was installed.

    - Fixed a bug that prevented MComix from showing the first page of an
      archive nested in other archives.

    - If both scrollbars were shown, it was impossible to scroll all the way
      down using the scrolling keys. This has been fixed.

    - When a directory was opened using the File->Open dialog, MComix did not
      sort files within the directory, ignoring the user's preferences.

    - "File->Refresh" did not restore the currently viewed page in archives.

    - Deleting a file in the library without closing the same file in the main
      window before no longer causes an exception.

    - The two images in double-page mode will now scale separately again.
      (by Valentin Gologuzov)

    - "Fit to size" mode no longer scales up small images unless "Stretch
      small images" is enabled as well.

    - If "Store information about recently opened files" is disabled,
      MComix will no longer remember the last browsed directory in the
      File->Open dialog.

    - Deleting a large amout of books from the library should be much
      faster now.

    - MComix now starts in RTL mode when a RTL language has been manually
      selected in the preference dialog.

    - Added an option to run arbitrary external commands on the currently
      opened file or archive. Commands can be edited from the "File->Open with"