@@ -37,6 +37,8 @@ BINDING_INFO = {
     'next page' : { 'title' : _('Next page'), 'group' : _('Reading') },
     'previous page ff' : { 'title': _('Back ten pages'), 'group': _('Reading') },
     'next page ff' : { 'title': _('Forward ten pages'), 'group': _('Reading') },
+    'previous page dynamic' : { 'title': _('Previous page (dynamic)'), 'group': _('Reading') },
+    'next page dynamic' : { 'title': _('Next page (dynamic)'), 'group': _('Reading') },
 
     'scroll left bottom' : { 'title' : _('Scroll to bottom left'), 'group' : _('Page orientation and zoom')},
     'scroll middle bottom' : { 'title' : _('Scroll to bottom center'), 'group' : _('Page orientation and zoom')},
