@@ -4,6 +4,9 @@ MComix 1.01
       "Last read" database might no longer exist, leading to program crash.
       This has been fixed.
 
+    - The ALT+Left and ALT+Right keys will now either advance one page,
+      or go back one page, depending on the user being in manga mode or not.
+
 MComix 1.00
 Release date: 26.04.2013
 
